test/parsing/errors/unknownPragma.chpl
pragma "not a real pragma"
proc main() {
  writeln(4);
}
